Configure spark